# ai-market-crawler

./: .env.example  .gitignore  README.md  README.new.md  docker-compose.yml
.claude/: settings.local.json
frontend/: Dockerfile  package-lock.json  package.json  turbo.json
frontend/apps/web/: next-env.d.ts  next.config.mjs
frontend/apps/web/app/: layout.tsx  page.tsx
go-service/: Dockerfile  go.mod  go.sum
go-service/cmd/api/: main.go
go-service/cmd/crawler/: main.go
go-service/internal/api/: router.go
go-service/internal/api/middleware/: rateLimit.go
go-service/internal/config/: config.go
go-service/internal/crawler/: crawler.go  github.go
go-service/internal/graph/: resolvers.go  schema.go  types.go
go-service/internal/grpcclient/: client.go
go-service/internal/helpers/: common.go
go-service/internal/models/: models.go
go-service/internal/scheduler/: scheduler.go
go-service/internal/store/: postgres.go
go-service/migrations/: 001_initial.down.sql  001_initial.up.sql
proto/: buf.gen.yaml
proto/aggregator/v1/: analysis.proto  chat.proto
python-service/: Dockerfile  pyproject.toml
python-service/src/: config.py  main.py
python-service/src/ai/: classifier.py  clusterer.py  rag.py  summarizer.py  trend_detector.py
python-service/src/ai_aggregator_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-service/src/db/: connection.py
python-service/src/embeddings/: store.py
python-service/src/grpc_server/: analysis_servicer.py  chat_servicer.py
